@@ -223,6 +223,9 @@ Tools
 Build
 -----
 
+- configure now checks whether gcc supports the PyArg_ParseTuple format
+  attribute.
+
 - Bug #1578513: Cross compilation was broken by a change to configure. 
   Repair so that it's back to how it was in 2.4.3.
 
